--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="https://altohearts.github.io/time-of-day/index.html" target="_blank">Time Of Day</a>
             <a href="https://altohearts.github.io/daily-grind/index.html" target="_blank">Daily Grind</a>
             <a href="https://altohearts.github.io/dom-play/index.html" target="_blank">DOM Play</a>
+            <a href="https://altohearts.github.io/ajax-pets/index.html" target="_blank">AJAX pets</a>
             <a href="https://github.com/AltoHearts" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/maria-o-sullivan-259bb51b9" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
